[gd_scene load_steps=3 format=2]

[ext_resource path="res://elements/note.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Note" type="Control"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
rect_min_size = Vector2( 140, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/hover_pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
flat = true

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 180.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
draw_tabs = true
drag_and_drop_selection_enabled = false
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="DragPoint" type="Control" parent="HBoxContainer"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DragPoint"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 20.0
mouse_filter = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/DragPoint/VBoxContainer"]
margin_right = 10.0
margin_bottom = 2.0
grow_vertical = 2
mouse_filter = 2
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer/DragPoint/VBoxContainer"]
margin_top = 6.0
margin_right = 10.0
margin_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer/DragPoint/VBoxContainer"]
margin_top = 12.0
margin_right = 10.0
margin_bottom = 14.0
grow_vertical = 2
mouse_filter = 2
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.392157 )

[connection signal="pressed" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="gui_input" from="HBoxContainer/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="gui_input" from="HBoxContainer/DragPoint" to="." method="_on_DragPoint_gui_input"]
